src/objects/Order__c.object
<CustomObject>
    <fields>
        <fullName>Alternate_Phone__c</fullName>
        <label>Alternate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Alternative_Phone__c</fullName>
        <label>Alternative Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Anti_Fake_Blank_Count__c</fullName>
        <label>Anti-Fake Blank Count</label>
        <summaryFilterItems>
            <field>Parts_Order__c.Need_Anti_Fake_check__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Parts_Order__c.Anti_Fake_result__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Parts_Order__c.X_Failure_Cd__c</field>
            <operation>equals</operation>
            <value>55 - DOA/DFS, 74 - Verified Failure</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Parts_Order__c.Removed_Parts_Status__c</field>
            <operation>notEqual</operation>
            <value>Good</value>
        </summaryFilterItems>
        <summaryForeignKey>Parts_Order__c.Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Anti_Fake_Count__c</fullName>
        <formula>Anti_Fake_Blank_Count__c + Anti_Fake_Fail_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anti-Fake Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anti_Fake_Fail_Count__c</fullName>
        <label>Anti-Fake Fail Count</label>
        <summaryFilterItems>
            <field>Parts_Order__c.Need_Anti_Fake_check__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Parts_Order__c.Anti_Fake_result__c</field>
            <operation>equals</operation>
            <value>Fail</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Parts_Order__c.X_Failure_Cd__c</field>
            <operation>equals</operation>
            <value>55 - DOA/DFS, 74 - Verified Failure</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Parts_Order__c.Removed_Parts_Status__c</field>
            <operation>notEqual</operation>
            <value>Good</value>
        </summaryFilterItems>
        <summaryForeignKey>Parts_Order__c.Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Badge_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Badge Number</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>CSC&amp;FST CE</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>CSC&amp;FST ASC</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>OrderToBadge_Number</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSC_Report_DP_User_Workgroup__c</fullName>
        <label>DP User Workgroup</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Order</relationshipLabel>
        <relationshipName>Order_Case</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Choose_Address__c</fullName>
        <label>Choose Address</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>User Entry</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Same business day</fullName>
                </value>
                <value>
                    <fullName>Next business day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_SN_IsNull__c</fullName>
        <label>Count SN IsNull</label>
        <summaryFilterItems>
            <field>Parts_Order__c.Parts_Serial_Number__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Parts_Order__c.X_Failure_Cd__c</field>
            <operation>notEqual</operation>
            <value>72-Unused</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Parts_Order__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </summaryFilterItems>
        <summaryForeignKey>Parts_Order__c.Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DMR__c</fullName>
        <formula>Work_Order_Name__r.DMR__c</formula>
        <label>DMR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DPUserName__c</fullName>
        <formula>DPUser__r.FirstName +  DPUser__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DPUserName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DPUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DPUser</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DP_Order_Time__c</fullName>
        <label>DP Order Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Delivery_Instructions__c</fullName>
        <label>Delivery Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Priority__c</fullName>
        <label>Delivery Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>50-SBD</fullName>
                </value>
                <value>
                    <fullName>94-SBD</fullName>
                </value>
                <value>
                    <fullName>95-NBD</fullName>
                </value>
                <value>
                    <fullName>96-NBD</fullName>
                </value>
                <value>
                    <fullName>97-Trade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HPE_ID__c</fullName>
        <formula>Work_Order_Name__r.Case.CSC_OPTId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPE ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IGSO_City__c</fullName>
        <label>IGSO_City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IGSO_Company__c</fullName>
        <label>IGSO_Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IGSO_Line1__c</fullName>
        <label>IGSO_Line1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IGSO_Line2__c</fullName>
        <label>IGSO_Line2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IGSO_Phone__c</fullName>
        <label>IGSO_Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IGSO_State_Province__c</fullName>
        <label>IGSO_State_Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IGSO_UserName__c</fullName>
        <label>IGSO_UserName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IGSO_Zip_Postal_Code__c</fullName>
        <label>IGSO_Zip_Postal_Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsEmailDpUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsEmailDpUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsMappingFinsh__c</fullName>
        <defaultValue>false</defaultValue>
        <description>腾讯自动报修order是否执行过mapping操作</description>
        <label>IsMappingFinsh</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Modified__c</fullName>
        <label>Last Modified</label>
        <summarizedField>Parts_Order__c.PGI_Date__c</summarizedField>
        <summaryForeignKey>Parts_Order__c.Order__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Line1__c</fullName>
        <label>Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line2__c</fullName>
        <label>Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_ID_Formula__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_ID__c</fullName>
        <label>Order ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Message__c</fullName>
        <label>Order Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Reason__c</fullName>
        <label>Order Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>615-Customer Self Repair</fullName>
                </value>
                <value>
                    <fullName>5AU-Service Advanced Exchange</fullName>
                </value>
                <value>
                    <fullName>575-DRP when SAP R/3&amp;APO Down</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <label>Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Back Ordered</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>POD</fullName>
                </value>
                <value>
                    <fullName>Recommand</fullName>
                    <default>true</default>
                    <label>Recommand</label>
                </value>
                <value>
                    <fullName>Ordered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parts_Request_DT__c</fullName>
        <label>Parts Request DT</label>
        <summarizedField>Parts_Order__c.Parts_Request_DT__c</summarizedField>
        <summaryForeignKey>Parts_Order__c.Order__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <description>HPE Phone Number</description>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty</label>
        <summaryForeignKey>Parts_Order__c.Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <label>Shipping Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Condition__c</fullName>
        <label>Shipping Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EX-Same Business day</fullName>
                </value>
                <value>
                    <fullName>02-Next Business day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_ID__c</fullName>
        <label>Site ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/ Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_IsNull_Count__c</fullName>
        <label>Status IsNull Count</label>
        <summaryFilterItems>
            <field>Parts_Order__c.Status__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Parts_Order__c.Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Work_Order_Name__c</fullName>
        <label>Work Order Name</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Order</relationshipLabel>
        <relationshipName>OrderToWorkOrder</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>X_Failure_Code_72_Count__c</fullName>
        <label>X Failure Code 72 Count</label>
        <summaryFilterItems>
            <field>Parts_Order__c.X_Failure_Cd__c</field>
            <operation>equals</operation>
            <value>72 - Unused</value>
        </summaryFilterItems>
        <summaryForeignKey>Parts_Order__c.Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X_Failure_Code_74_Count__c</fullName>
        <label>X Failure Code 74 Count</label>
        <summaryFilterItems>
            <field>Parts_Order__c.X_Failure_Cd__c</field>
            <operation>equals</operation>
            <value>74 - Verified Failure</value>
        </summaryFilterItems>
        <summaryForeignKey>Parts_Order__c.Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>HPE_ID__c</columns>
        <columns>Order_Date__c</columns>
        <columns>Order_Reason__c</columns>
        <columns>Order_Status__c</columns>
        <columns>Shipping_Condition__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <portalRole>ROPSGuiYangTeam2</portalRole>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Number</label>
        <type>Text</type>
    </nameField>
    <recordTypes>
        <fullName>Clocked_Record</fullName>
        <active>true</active>
        <label>Clocked Record</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Record</fullName>
        <active>true</active>
        <label>New Record</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>